--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ h4 {
   color: #4e4e4e;
 }
 body {
-  background: f7f7f7;
+  background: #f7f7f7;
 }
 .wrapper {
   width: 96%;
@@ -66,9 +66,13 @@ header nav li a {
 header nav li a.current {
   color: #1abb9c;
 }
-#main-banner img {
+
+.banner{
   width: 100%;
+  max-height: 45vh;
+
 }
+
 #main-banner {
   max-height: 500px;
   overflow: hidden;
